# distill

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/distill/: __init__.py  cli.py  config.py  db.py  models.py
src/distill/article/: __init__.py  generator.py  prompts.py
src/distill/output/: __init__.py  email.py  epub.py  html.py  markdown.py
src/distill/sources/: __init__.py  podcast.py  youtube.py
src/distill/transcription/: __init__.py  base.py  whisper_api.py  whisper_local.py
tests/: conftest.py  test_config.py  test_db.py  test_models.py
tests/test_article/: test_generator.py  test_prompts.py
tests/test_output/: test_email.py  test_epub.py  test_html.py  test_markdown.py
tests/test_sources/: test_podcast.py  test_youtube.py
tests/test_transcription/: test_whisper_api.py
