[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distill"
version = "0.1.0"
description = "Transform YouTube videos and podcast episodes into readable articles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "anthropic>=0.40",
    "youtube-transcript-api>=0.6",
    "yt-dlp>=2024.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "markdown>=3.5",
    "ebooklib>=0.18",
]

[project.optional-dependencies]
whisper = ["openai-whisper>=20231117"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
distill = "distill.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "feedparser",
    "feedparser.*",
    "ebooklib",
    "ebooklib.*",
    "markdown",
    "markdown.*",
    "whisper",
    "whisper.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.hatch.build.targets.wheel]
packages = ["src/distill"]
